<resources>
    <string name="app_name">Find Me A Tutor</string>
    <string name="action_settings">Settings</string>
    <!-- Start of Login Page strings-->
    <string name="username">Email:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_activity_re_gister">Register</string>
    <!-- End of Login Page strings-->

    <!-- Start of Register Page strings-->
    <string name="firstname">Enter First Name:</string>
    <string name="lastname">Enter Last Name:</string>
    <string name="email">Enter Email Id:</string>
    <!--<string name="password">Enter Password:</string>-->
    <string name="confirmpassword">Confirm Password:</string>
    <string name="usertype">Select User Type:</string>
    <string name="addressline1">Enter Address Line 1:</string>
    <string name="addressline2">Enter Address Line 2:</string>
    <string name="city">Enter City:</string>
    <string name="state">Enter State:</string>
    <string name="zipcode">Enter Zip Code:</string>
    <string name="phonenumber">Enter Phone Number:</string>
    <string-array name="usertypearray">
        <item>Select User Type:</item>
        <item>Tutor</item>
        <item>Student</item>
    </string-array>
    <string-array name="statearray">
        <item>AL</item>
        <item>AK</item>
        <item>AZ</item>
        <item>AR</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>


    </string-array>
    <string name="title_activity_main">Home</string>

    <string name="title_section1">Register Tutor Service</string>
    <string name="title_section2">View Tutor Profile</string>
    <!-- <string name="title_section3">Section 3</string> -->
    <string name="title_activity_register">Register Service</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="tutor">Tutor: </string>

    <string name="enter_category">Enter Category:</string>
    <string name="enter_sub_category">Enter Sub Category:</string>
    <string name="select_price">Price Per Hour:</string>
    <string name="initial_price">0 USD</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="travel_in_miles">Willing to Travel within ? (in Miles)</string>
    <string name="register_tutor_service_btn_text">Register Tutor Service</string>
    <string-array name="travel_miles">
        <item>Select Distance Willing to Travel?(in Miles)</item>
        <item>0</item>
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>25</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_nearby_tutors">Map</string>
    <string name="title_activity_subject_profile">SubjectProfileActivity</string>

</resources>
