<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="edu.uta.cse.personaltutorservice.RegisterActivity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/RelativeLayout"
    android:layout_centerInParent="true"
    android:background="@mipmap/backgrounddesign5"
    >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logoImageView"
        android:src="@mipmap/logo"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <EditText
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtFirstName"
        android:hint="@string/firstname"
   

        
        android:layout_below="@+id/logoImageView"/>
    <EditText
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtLastName"
        android:hint="@string/lastname"
       
       
        
        android:layout_below="@+id/txtFirstName"/>
    <EditText
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtEmail"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/txtLastName"/>
    <EditText
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtPassword"
        android:inputType="textPassword"
        android:hint="@string/password"
       
       
        
        android:layout_below="@+id/txtEmail"/>
    <EditText
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtConfirmPassword"

        android:inputType="textPassword"
        
        android:hint="@string/confirmpassword"
        android:layout_below="@+id/txtPassword"/>

    <Spinner
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userTypeSpinner"
        android:prompt="@string/usertype"
        android:entries="@array/usertypearray"

       
        
        android:layout_below="@+id/txtConfirmPassword"
        android:layout_alignParentStart="true"
        android:spinnerMode="dropdown"
        android:layout_alignEnd="@+id/txtConfirmPassword" />
   <!-- <TextView
        android:id="@+id/spinnerErrorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginLeft="70dp"
        android:focusable="true"
        android:visibility="visible"
        android:focusableInTouchMode="true"
        android:layout_below="@+id/txtConfirmPassword"
       android:layout_toEndOf="@+id/userTypeSpinner"
        />-->

    <EditText

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtAddressLine1"
        android:hint="@string/addressline1"
        android:layout_below="@+id/userTypeSpinner"/>
    <EditText

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtAddressLine2"
        android:hint="@string/addressline2"
       
       
        
        android:layout_below="@+id/txtAddressLine1"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtCity"
        android:hint="@string/city"
       
       
        
        android:layout_below="@+id/txtAddressLine2"/>
    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtState"
        android:hint="@string/state"
       
       
        
        android:layout_below="@+id/txtCity"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtZipCode"
        android:hint="@string/zipcode"
       
       
        
        android:layout_below="@+id/txtState"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtPhoneNumber"
        android:hint="@string/phonenumber"
        android:inputType="phone"

        

        android:layout_below="@+id/txtZipCode"/>
    <Button android:id="@+id/SignUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_below="@+id/txtPhoneNumber"/>

    <ProgressBar
        android:id="@+id/loginProgressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>
</RelativeLayout>
</ScrollView>
