<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logoImageView"
        android:src="@mipmap/logo"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <TextView
        android:padding="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Register Tutor Service"
        android:id="@+id/textView"
        android:layout_below="@+id/logoImageView"
        android:layout_centerHorizontal="true"/>

    <AutoCompleteTextView
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/categoryAutoCompleteTextView"
        android:hint="@string/enter_category"
        android:layout_below="@+id/textView"/>

    <AutoCompleteTextView
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/subCategoryAutoCompleteTextView"
        android:hint="@string/enter_sub_category"
        android:layout_below="@+id/categoryAutoCompleteTextView"
        android:layout_alignParentStart="true" />

    <TextView
        android:padding="10dp"
        android:textSize="18sp"
        android:id="@+id/labelSelectPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_price"
        android:layout_below="@+id/subCategoryAutoCompleteTextView"
        />
    <TextView
        android:padding="10dp"
        android:textSize="18sp"
        android:id="@+id/labelPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/initial_price"
        android:layout_below="@+id/subCategoryAutoCompleteTextView"
        android:layout_alignEnd="@+id/logoImageView" />
    <SeekBar
        android:layout_marginStart="15dp"
        android:paddingLeft="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/priceSeekBar"

        android:max="100"
        android:progress="5"
        android:layout_below="@+id/labelSelectPrice"

         />


</RelativeLayout>